# uno

./: .eslintrc.json  .gitignore  README.md  README_VIDEO_EDITING.md  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
app/: globals.css  layout.tsx
app/(chat)/api/chat/: route.ts
app/(chat)/api/files/upload/: route.ts
app/(chat)/chat/[id]/: page.tsx
components/custom/: chat.tsx  icons.tsx  loading-state.tsx  message.tsx  multimodal-input.tsx  navbar.tsx  overview.tsx  preview-attachment.tsx  smart-editor.tsx  style-selector.tsx  video-editor-modes.tsx  video-result.tsx  video-upload.tsx
components/custom/video-editor/: full-editor.tsx
lib/: auth-actions.ts  rust-video-client.ts  video-processor.ts
lib/drizzle/: 0001_motionless_hellcat.sql
lib/drizzle/meta/: 0001_snapshot.json  _journal.json
scripts/: start-dev.sh
video-processor-rust/: Cargo.toml  Dockerfile  test_cinematic.sh  test_fixed.sh
video-processor-rust/src/: main.rs
